// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketMacros component should display an empty state if there's no macros 1`] = `
<div
  className="component"
>
  <a
    className="clearMacros"
    id="clear-macro-button"
    onClick={[Function]}
  >
    <i
      className="material-icons d-none d-md-inline-block"
    >
      close
    </i>
    <Button
      className="d-md-none"
      color="secondary"
      size="sm"
      tag="button"
    >
      Close
    </Button>
    <Tooltip
      delay={0}
      placement="top"
      target="clear-macro-button"
    >
      <strong>
        Esc
      </strong>
       to close the macro list.
    </Tooltip>
  </a>
  <div
    className="no-result-container"
  >
    <p>
      You don't have any macros yet
    </p>
    <Button
      color="info"
      onClick={[Function]}
      tag="button"
      type="button"
    >
      <i
        className="fa fa-fw fa-plus mr-2"
      />
      Create a new macro
    </Button>
  </div>
  <Connect(MacroContainer) />
</div>
`;

exports[`TicketMacros component should display another empty state if there's no macros matching the searchQuery 1`] = `
<div
  className="component"
>
  <a
    className="clearMacros"
    id="clear-macro-button"
    onClick={[Function]}
  >
    <i
      className="material-icons d-none d-md-inline-block"
    >
      close
    </i>
    <Button
      className="d-md-none"
      color="secondary"
      size="sm"
      tag="button"
    >
      Close
    </Button>
    <Tooltip
      delay={0}
      placement="top"
      target="clear-macro-button"
    >
      <strong>
        Esc
      </strong>
       to close the macro list.
    </Tooltip>
  </a>
  <div
    className="no-result-container"
  >
    <p>
      <span>
        No macro for 
        <b>
          Foo Bar
        </b>
      </span>
    </p>
    <Button
      color="info"
      onClick={[Function]}
      tag="button"
      type="button"
    >
      <i
        className="fa fa-fw fa-plus mr-2"
      />
      Create a new macro
    </Button>
  </div>
  <Connect(MacroContainer) />
</div>
`;

exports[`TicketMacros component should display macros list, and selected macro 1`] = `
<div
  className="component"
>
  <a
    className="clearMacros"
    id="clear-macro-button"
    onClick={[Function]}
  >
    <i
      className="material-icons d-none d-md-inline-block"
    >
      close
    </i>
    <Button
      className="d-md-none"
      color="secondary"
      size="sm"
      tag="button"
    >
      Close
    </Button>
    <Tooltip
      delay={0}
      placement="top"
      target="clear-macro-button"
    >
      <strong>
        Esc
      </strong>
       to close the macro list.
    </Tooltip>
  </a>
  <div
    className="content"
  >
    <div
      className="macroList macro-list"
    >
      <div
        className="macro-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <div
          className="content"
        >
          Refund my order
        </div>
      </div>
      <div
        className="macro-item"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <div
          className="content"
        >
          Order my refund
        </div>
      </div>
    </div>
    <div
      className="previewContainer"
    >
      <Dropdown
        active={false}
        addonType={false}
        direction="down"
        inNavbar={false}
        isOpen={false}
        nav={false}
        toggle={[Function]}
      >
        <DropdownToggle
          aria-haspopup={true}
          caret={true}
          className="manageMacros"
          color="secondary"
          id="deleteMacroTarget"
        >
          <i
            className="material-icons"
          >
            settings
          </i>
        </DropdownToggle>
        <DropdownMenu
          flip={true}
          tag="div"
        >
          <DropdownItem
            className="cursor-pointer"
            onClick={[Function]}
            tag="button"
            toggle={true}
          >
            <i
              className="material-icons"
            >
              settings
            </i>
             Manage macros
          </DropdownItem>
          <DropdownItem
            className="cursor-pointer"
            onClick={[Function]}
            tag="button"
            toggle={true}
          >
            <i
              className="material-icons"
            >
              mode_edit
            </i>
             Edit macro
          </DropdownItem>
          <DropdownItem
            className="cursor-pointer"
            onClick={[Function]}
            tag="button"
            toggle={true}
          >
            <i
              className="material-icons"
            >
              add
            </i>
             Create new macro
          </DropdownItem>
          <DropdownItem
            className="cursor-pointer"
            id="deleteButtonMenuItem"
            onClick={[Function]}
            tag="button"
            toggle={true}
          >
            <i
              className="material-icons text-danger"
            >
              delete
            </i>
             Delete macro
          </DropdownItem>
        </DropdownMenu>
      </Dropdown>
      <Popover
        delay={
          Object {
            "hide": 0,
            "show": 0,
          }
        }
        hideArrow={false}
        isOpen={false}
        placement="bottom"
        placementPrefix="bs-popover"
        target="deleteMacroTarget"
        toggle={[Function]}
      >
        <PopoverBody
          tag="div"
        >
          <p>
            Are you sure you want to delete '
            '?
          </p>
          <Button
            color="danger"
            onClick={[Function]}
            tag="button"
          >
            Delete macro
          </Button>
          <Button
            className="float-right"
            color="secondary"
            onClick={[Function]}
            tag="button"
          >
            Cancel
          </Button>
        </PopoverBody>
      </Popover>
      <Preview
        className="preview"
        displayHTML={true}
        macro={
          Immutable.Map {
          }
        }
      />
    </div>
  </div>
  <Connect(MacroContainer) />
</div>
`;
